@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods

title US001 Display Listed Properties - Domain Model

class UnregisteredUser {
}

class System {
-listOfProperties
}

interface Property {
}

class Request{
-type
-price
-priceUnit
-isItPublished
-commissionDate
-owner
-commissionValue
-duration
}

class Land{
-area
-location
-distanceFromCityCentre
-agent
-photographs
-finalPrice
-announcementDate
-saleDate
-request
-store
}

class Apartment {
-area
-location
-distanceFromCityCentre
-agent
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
-photographs
-finalPrice
-announcementDate
-saleDate
-request
-store
}

class House {
-area
-location
-distanceFromCityCentre
-agent
-numOfBedrooms
-numOfBathrooms
-numOfParkingSpaces
-centralHeating
-airConditioning
-basement
-inhabitableLoft
-sunExposure
-photographs
-finalPrice
-announcementDate
-saleDate
-request
-store
}

UnregisteredUser "1" -- "1" System : requests to list properties\nand give filter and sort criteria >
System "1" - "*" Property : lists >

Property "1" - "1" Request : has >

Property "1" -- "1" Apartment : can be >
Property "1" -- "1" Land : can be >
Property "1" -- "1" House : can be >


@enduml